Fix logo path in popup.html

--- a/popup.html
+++ b/popup.html
@@ -238,7 +238,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="icons/icon-48.png" alt="SecureGo logo" class="logo">
+    <img src="icons/icon48.jpg" alt="SecureGo logo" class="logo">
     <h1>SecureGo Email Protection</h1>
   </div>
   
