Update branding from SecureGo to SecureGO across all dashboard and popup files

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SecureGo Email Protection</title>
+  <title>SecureGO Email Protection</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -238,8 +238,8 @@
 </head>
 <body>
   <div class="header">
-    <img src="icons/icon48.jpg" alt="SecureGo logo" class="logo">
-    <h1>SecureGo Email Protection</h1>
+    <img src="icons/icon48.jpg" alt="SecureGO logo" class="logo">
+    <h1>SecureGO Email Protection</h1>
   </div>
   
   <div class="status">
@@ -357,7 +357,7 @@
   <button id="open-dashboard">Open Full Dashboard</button>
   
   <div class="footer">
-    Powered by AI - SecureGo Extension v1.0
+    Powered by AI - SecureGO Extension v1.0
   </div>
 
   <script src="scripts/popup.js"></script>
