--- a/html/nsfw-dashboard.html
+++ b/html/nsfw-dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SecureGo - NSFW Protection Dashboard</title>
+  <title>SecureGO - NSFW Protection Dashboard</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -238,7 +238,7 @@
   <div class="container">
     <div class="header">
       <div class="logo-section">
-        <img src="../icons/icon-48.png" alt="SecureGo logo" class="logo">
+        <img src="../icons/icon-48.png" alt="SecureGO logo" class="logo">
         <h1>NSFW Protection Dashboard</h1>
       </div>
       <div class="controls">
@@ -327,7 +327,7 @@
     </div>
     
     <div class="footer">
-      SecureGo Extension v1.0 | &copy; 2023 SecureGo
+      SecureGO Extension v1.0 | &copy; 2023 SecureGO
     </div>
   </div>
   
